--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TP pour le cours INF8808.",
   "main": "src/index.js",
   "scripts": {
-    "build": "parcel build --no-content-hash ./src/index.html",
+    "build": "parcel build ./src/index.html",
     "start": "parcel ./src/index.html --log-level=2 --port=8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
