--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "d3": "^7.6.1",
     "d3-scale-chromatic": "^1.5.0",
+    "d3-tip": "^0.9.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.4.3"
   },
