--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "d3": "^7.6.1",
+    "d3-collection": "^1.0.7",
     "d3-scale-chromatic": "^1.5.0",
     "d3-tip": "^0.9.1",
     "parcel-bundler": "^1.12.4",
