--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.6.1",
     "d3-collection": "^1.0.7",
     "d3-scale-chromatic": "^1.5.0",
+    "d3-svg-legend": "^2.25.6",
     "d3-tip": "^0.9.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.4.3"
